--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.1
   get: ^4.7.2
+  get_it: ^8.0.3
   go_router: ^15.1.1
   google_fonts: ^6.2.1
 
