--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   go_router: ^15.1.1
   google_fonts: ^6.2.1
   modal_progress_hud_nsn: ^0.5.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
